--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -30,7 +30,7 @@
         <button
           mat-raised-button
           (click)="loginUser()"
-          color="primary"
+          color="dark"
         >
           Login
         </button>
