--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -27,4 +27,21 @@
   
       </mat-card-actions>
     </mat-card>
+    <mat-card *ngFor="let movie of favMovies;" style="flex: 1 1 auto;">
+      <mat-card-header>
+          <mat-card-title>{{movie.Title}}</mat-card-title>
+      </mat-card-header>
+      <img src={{movie.ImagePath}} alt={{movie.Title}} style="width: 280px;" />
+      <mat-card-actions>
+          <button mat-button color="dark">
+              Genre: {{movie.Genre.Name}}
+          </button>
+          <button mat-button color="dark">
+              Director: {{movie.Director.Name}}
+          </button>
+          <button mat-button (click)="removeFromFavoriteMovies(movie._id)" color="dark">
+            <mat-icon>favorite</mat-icon>
+          </button>
+      </mat-card-actions>
+    </mat-card>
   </div>
