--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -33,9 +33,24 @@ $boxShadowColor: #e9ecef;
     color: $textColor;
 }
 
-.mat-card>.mat-card-actions:last-child {
+.mat-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    background-color: $cardColor;
+    max-width: 280px;
+    width: 280px;
+    margin: 15px;
+    padding: 20px 20px;
+}
+
+.mat-card-actions:last-child {
     margin-bottom: -8px;
     padding-bottom: 0;
     display: flex;
     justify-content: space-evenly;
+    
+    
 }
